Spark Dataframe Basics V1

--- a/Spark Dataframe Basics.ipynb
+++ b/Spark Dataframe Basics.ipynb
@@ -211,10 +211,399 @@
       " |-- name: string (nullable = true)\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "21/09/08 08:31:18 WARN Executor: Issue communicating with driver in heartbeater\n",
+      "org.apache.spark.rpc.RpcTimeoutException: Futures timed out after [10000 milliseconds]. This timeout is controlled by spark.executor.heartbeatInterval\n",
+      "\tat org.apache.spark.rpc.RpcTimeout.org$apache$spark$rpc$RpcTimeout$$createRpcTimeoutException(RpcTimeout.scala:47)\n",
+      "\tat org.apache.spark.rpc.RpcTimeout$$anonfun$addMessageIfTimeout$1.applyOrElse(RpcTimeout.scala:62)\n",
+      "\tat org.apache.spark.rpc.RpcTimeout$$anonfun$addMessageIfTimeout$1.applyOrElse(RpcTimeout.scala:58)\n",
+      "\tat scala.runtime.AbstractPartialFunction.apply(AbstractPartialFunction.scala:38)\n",
+      "\tat org.apache.spark.rpc.RpcTimeout.awaitResult(RpcTimeout.scala:76)\n",
+      "\tat org.apache.spark.rpc.RpcEndpointRef.askSync(RpcEndpointRef.scala:103)\n",
+      "\tat org.apache.spark.executor.Executor.reportHeartBeat(Executor.scala:996)\n",
+      "\tat org.apache.spark.executor.Executor.$anonfun$heartbeater$1(Executor.scala:212)\n",
+      "\tat scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.java:23)\n",
+      "\tat org.apache.spark.util.Utils$.logUncaughtExceptions(Utils.scala:1996)\n",
+      "\tat org.apache.spark.Heartbeater$$anon$1.run(Heartbeater.scala:46)\n",
+      "\tat java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)\n",
+      "\tat java.base/java.util.concurrent.FutureTask.runAndReset(FutureTask.java:305)\n",
+      "\tat java.base/java.util.concurrent.ScheduledThreadPoolExecutor$ScheduledFutureTask.run(ScheduledThreadPoolExecutor.java:305)\n",
+      "\tat java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)\n",
+      "\tat java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:829)\n",
+      "Caused by: java.util.concurrent.TimeoutException: Futures timed out after [10000 milliseconds]\n",
+      "\tat scala.concurrent.impl.Promise$DefaultPromise.ready(Promise.scala:259)\n",
+      "\tat scala.concurrent.impl.Promise$DefaultPromise.result(Promise.scala:263)\n",
+      "\tat org.apache.spark.util.ThreadUtils$.awaitResult(ThreadUtils.scala:293)\n",
+      "\tat org.apache.spark.rpc.RpcTimeout.awaitResult(RpcTimeout.scala:75)\n",
+      "\t... 12 more\n",
+      "21/09/08 08:31:18 WARN NettyRpcEnv: Ignored message: HeartbeatResponse(false)\n"
+     ]
     }
    ],
    "source": [
     "df.printSchema() # age's structure is integer now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Column<'age'>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " df[\"age\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.column.Column"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df[\"age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[age: int]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select(\"age\") # returns column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+\n",
+      "| age|\n",
+      "+----+\n",
+      "|null|\n",
+      "|  30|\n",
+      "|  19|\n",
+      "+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(\"age\").show() # returns dataframe that contains a single column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.dataframe.DataFrame"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df.select(\"age\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Row(age=None, name='Michael')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Row(age=None, name='Michael')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.types.Row"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df.head(2)[0]) # row object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+\n",
+      "| age|   name|\n",
+      "+----+-------+\n",
+      "|null|Michael|\n",
+      "|  30|   Andy|\n",
+      "|  19| Justin|\n",
+      "+----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select([\"age\", \"name\"]).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+------+\n",
+      "| age|   name|newage|\n",
+      "+----+-------+------+\n",
+      "|null|Michael|  null|\n",
+      "|  30|   Andy|    30|\n",
+      "|  19| Justin|    19|\n",
+      "+----+-------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn(\"newage\", df[\"age\"]).show() #adding new column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+----------+\n",
+      "| age|   name|double_age|\n",
+      "+----+-------+----------+\n",
+      "|null|Michael|      null|\n",
+      "|  30|   Andy|        60|\n",
+      "|  19| Justin|        38|\n",
+      "+----+-------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn(\"double_age\", df[\"age\"] * 2).show() #but not permanent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------+\n",
+      "|my_new_age|   name|\n",
+      "+----------+-------+\n",
+      "|      null|Michael|\n",
+      "|        30|   Andy|\n",
+      "|        19| Justin|\n",
+      "+----------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumnRenamed(\"age\", \"my_new_age\").show() # withColumnRenamed it is permanent now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+----------+\n",
+      "| age|   name|double_age|\n",
+      "+----+-------+----------+\n",
+      "|null|Michael|      null|\n",
+      "|  30|   Andy|        32|\n",
+      "|  19| Justin|        21|\n",
+      "+----+-------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn(\"double_age\", df[\"age\"] + 2).show() # there is a lot of flexibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.createOrReplaceTempView(\"people\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = spark.sql(\"select * from people\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+\n",
+      "| age|   name|\n",
+      "+----+-------+\n",
+      "|null|Michael|\n",
+      "|  30|   Andy|\n",
+      "|  19| Justin|\n",
+      "+----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "results.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_results = spark.sql(\"select * from people where age =30\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+\n",
+      "|age|name|\n",
+      "+---+----+\n",
+      "| 30|Andy|\n",
+      "+---+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_results.show()"
    ]
   },
   {
